# ShellSentinel

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README_de.md  README_en.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
conf/: agent.conf.example  app_config.json
conf/locales/de/: strings.json
conf/locales/en/: strings.json
conf/locales/es/: strings.json
docs/: README_es.md  custom_model_providers_es.md  user_guide_de.md  user_guide_en.md  user_guide_es.md
src/smart_ai_sys_admin/: __init__.py  __main__.py  cli.py  connection.py  logging_setup.py  tui.py
src/smart_ai_sys_admin/agent/: __init__.py  config.py  factory.py  permissions.py  runtime.py  tools.py
src/smart_ai_sys_admin/agent/providers/: __init__.py  cerebras.py
src/smart_ai_sys_admin/config/: __init__.py
src/smart_ai_sys_admin/localization/: __init__.py
src/smart_ai_sys_admin/plugins/: __init__.py  manager.py  registry.py  types.py
src/smart_ai_sys_admin/ui/: __init__.py  app.py  commands.py  dialogs.py  panels.py  welcome.py
system_prompts/: bedrock.md  cerebras.md  lmstudio.md  local.md  openai.md
tests/: test_permissions.py  test_placeholder.py
website/: CNAME  docs.html  download.html  features.html  gallery.html  help.html  how.html  index.html  product.html  quickstart.html  robots.txt  sitemap.xml  version.txt
website/assets/css/: manuals.css  styles.css
website/assets/js/: app.js  translations.js
website/manuals/: contributor-handbook-es.html  custom-providers-es.html  plugin-development-de.html  plugin-development-en.html  plugin-development-es.html  project-overview-en.html  user-guide-de.html  user-guide-en.html  user-guide-es.html
