[project]
name = "smart-ai-sys-admin"
version = "0.1.0"
description = "AI assisted terminal admin that maintains SSH/SFTP sessions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Equipo Smart AI"}
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "ruff==0.5.4",
  "pytest==8.3.2"
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "src|tests"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
